--- a/destination.html
+++ b/destination.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets/css/destination_style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Space tourism website</title>
 </head>
@@ -18,25 +18,46 @@
     <hr>
     <nav>
       <ul id="pageMenu">
-        <li class="active"><a href="index.html"><span>00</span> Home</a></li>
-        <li><a href="destination.html"><span>01</span> Destination</a></li>
-        <li><a href="crew.html"><span>02</span> Crew</a></li>
-        <li><a href="technology.html"><span>03</span> Technology</a></li>
+        <li class="active"><a href="index.html" class="u_navItens"><span>00</span> Home</a></li>
+        <li><a href="destination.html" class="u_navItens"><span>01</span> Destination</a></li>
+        <li><a href="crew.html" class="u_navItens"><span>02</span> Crew</a></li>
+        <li><a href="technology.html" class="u_navItens"><span>03</span> Technology</a></li>
       </ul>
     </nav>
   </header>
 
   <body>
-    <section id="mainContainer">
-      <div id="mainInfo">
-        <h5 id="introduction">So, you want to travel to</h5>
-        <span>Space</span>
-        <p id="description">Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!</p>
-      </div>
-      <div id="exploreButton"><a href="#">Explore</a></div>
-    </section>
+    <main class="u_mainContainer">
+        <h1 class="u_introduction"><span class="u_numberPage">01</span>Pick your destination</h1>
+
+        <section class="u_contentContainer">
+          <div><img src="./assets/destination/image-moon.png" alt="moon image"></div>
+    
+          <div class="u_mainInfo">
+            <nav id="destinationsNavBar">
+              <ul>
+                <li class="u_navItens destinationItens">Moon</li>
+                <li class="u_navItens destinationItens">Mars</li>
+                <li class="u_navItens destinationItens">Europa</li>
+                <li class="u_navItens destinationItens">Titan</li>
+              </ul>
+            </nav>
+            <div class="destinationTexts">
+              <h2 id="destinationTitle" class="u_titles">Moon</h2>
+              <p class="u_description">See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
+  regain perspective and come back refreshed. While you’re there, take in some history 
+  by visiting the Luna 2 and Apollo 11 landing sites.</p>
+            </div>
+              <hr>
+              <div id="destinationInfos">
+                <ul>
+                  <li><h3>Avg. distance</h3><p>384,400 km</p></li>
+                  <li><h3>Est. travel time</h3><p>3 days</p></li>
+                </ul>
+              </div>
+          </div>
+        </section>
+    </main>
   </body>
 
 </body>
