--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="assets/css/main_style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
   <!-- Import Vue.js -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
@@ -21,24 +21,26 @@
     <hr>
     <nav>
       <ul id="pageMenu">
-        <li class="active"><a href="index.html"><span>00</span> Home</a></li>
-        <li><a href="destination.html"><span>01</span> Destination</a></li>
-        <li><a href="crew.html"><span>02</span> Crew</a></li>
-        <li><a href="technology.html"><span>03</span> Technology</a></li>
+        <li class="active"><a href="index.html" class="u_navItens"><span>00</span> Home</a></li>
+        <li><a href="destination.html" class="u_navItens"><span>01</span> Destination</a></li>
+        <li><a href="crew.html" class="u_navItens"><span>02</span> Crew</a></li>
+        <li><a href="technology.html" class="u_navItens"><span>03</span> Technology</a></li>
       </ul>
     </nav>
   </header>
 
-    <section id="mainContainer">
-      <div id="mainInfo">
-        <h5 id="introduction">So, you want to travel to</h5>
-        <span>Space</span>
-        <p id="description">Let’s face it; if you want to go to space, you might as well genuinely go to 
+    <main>
+      <section class="u_mainContainer u_contentContainer">
+      <div class="u_mainInfo">
+        <h2 id="mainIntroduction" class="u_introduction">So, you want to travel to</h2>
+        <h1 id="mainTitle" class="u_titles">Space</h1>
+        <p class="u_description">Let’s face it; if you want to go to space, you might as well genuinely go to 
   outer space and not hover kind of on the edge of it. Well sit back, and relax 
   because we’ll give you a truly out of this world experience!</p>
       </div>
       <div id="exploreButton"><a href="#">Explore</a></div>
-    </section>
+      </section>
+    </main>
   </div>
 
   <!-- Import App -->
@@ -46,9 +48,12 @@
 
   <!-- Import Components -->
   <script src="./assets/scripts/components/destinations.js"></script>
-
   <script src="./assets/scripts/components/technologies.js"></script>
-
   <script src="./assets/scripts/components/crew.js"></script>
+
+  <!-- Mount App -->
+  <script>
+    const mountedApp = app.mount('#app')
+  </script>
 </body>
 </html>
