--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <!-- Import Styles -->
   <link rel="stylesheet" href="assets/css/main_style.css">
+    <link rel="stylesheet" href="assets/css/destination_style.css">
+      <link rel="stylesheet" href="assets/css/crew_style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap" rel="stylesheet">
@@ -21,17 +23,21 @@
     <hr>
     <nav>
       <ul id="pageMenu">
-        <li class="active"><a href="" class="u_navItens"><span>00</span> Home</a></li>
-        <li><a class="u_navItens" @click="showDestinations()"><span>01</span> Destination</a></li>
-        <li><a href="" class="u_navItens" @click="removeAll()"><span>02</span> Crew</a></li>
-        <li><a href="" class="u_navItens" @click="showD()"><span>03</span> Technology</a></li>
+        <li class="u_navItens active"><span>00</span> Home</li>
+        <li class="u_navItens" ><span>01</span> Destination</li>
+        <li class="u_navItens"><span>02</span> Crew</li>
+        <li class="u_navItens"><span>03</span> Technology</li>
       </ul>
     </nav>
   </header>
+    <div id="componentsContainer">
 
-    <explore v-show="tabs.showingDestinations"></explore>
-    <destinations v-show="tabs.showingDestinations"></destinations>
-    <technologies v-show="tabs.showingT"></technologies>
+    <!-- <explore></explore>
+    <destinations></destinations>
+    <technologies></technologies> -->
+    <crew></crew>
+
+    </div>
   </div>
 
   <!-- Import App -->
