Still styling 'crew'

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <!-- Import Styles -->
   <link rel="stylesheet" href="assets/css/main_style.css">
-    <link rel="stylesheet" href="assets/css/destination_style.css">
       <link rel="stylesheet" href="assets/css/crew_style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,10 +31,10 @@
   </header>
     <div id="componentsContainer">
 
-    <!-- <explore></explore>
+    <explore></explore>
     <destinations></destinations>
-    <technologies></technologies> -->
     <crew></crew>
+    <!-- <technologies></technologies> -->
 
     </div>
   </div>
